# paper_llm_for_secure_inclusive_auth

./: .env.example  .gitignore  .zenodo.json  CITATION.cff  LICENSE  README.md  provider.py  readme.md  run.py
app/: __init__.py  cli.py  constants.py
app/pipeline/: __init__.py  multi.py  single.py
app/utils/: io.py  pricing.py  summary.py  tokens.py
archives/password_recovery_education/: password_recovery_education_no_inclusivity.md  password_recovery_education_with_inclusivity.md
case_1/: index.html
evalution_rubrics/: inclusivity_rubric.md
final_evaluations/: README.md
final_evaluations/evaluation_rubrics/: inclusivity_eval_case_1.md  inclusivity_eval_case_2.md  inclusivity_eval_case_3.md  security_eval_case_1.md  security_eval_case_2.md  security_eval_case_3.md
human_evaluations/: README.md  inclusivity_evaluation_results.xlsx  security_evaluation_results.xlsx
multi_agent_system/: pyproject.toml  run.py
prompts/: prompt-coder.txt  prompt-inclusivity-eval.txt  prompt-tasker.txt  prompt_coder.txt  prompt_evaluator.txt  prompt_programmer_hitl.txt  prompt_tasker.txt
requirements/: password_recovery_no_inclusivity.md  use_case_1.txt
requirements/password_recovery_education/: edu_story.md  password_recovery_education_no_inclusivity.md  password_recovery_education_no_inclusivity_no_condition.md  password_recovery_education_with_inclusivity.md
screenshots/: README.md
software_descriptions/: password_recovery.md
survey_questionnaires/: README.md
workspace/: Dockerfile  README.md  docker-compose-local.yaml  docker-compose.yaml
(+235 files in other folders)
