[project]
name = "multi-agent-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.68.0",
    "langchain-anthropic>=0.3.20",
    "langchain-openai>=0.3.33",
    "langgraph>=0.6.7",
    "openai>=1.109.1",
    "python-dotenv>=1.1.1",
    "tiktoken>=0.11.0",
]
